--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset='utf-8' />
   <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-  <meta name="description" content="Matt Barackman : Internet technologist, craftsman, andd entrepreneur." />
+  <meta name="description" content="Griffin Arkilic : Web Developer, Product Person, and entrepreneur." />
 
   <link rel="stylesheet" type="text/css" media="all" href="stylesheets/stylesheet.css">
   <link rel="stylesheet" type="text/css" media="all" href="stylesheets/normalize.css">
@@ -14,7 +14,7 @@
   <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all">
 
 
-  <title>Matt Barackman</title>
+  <title>Griffin Arkilic</title>
 </head>
 
 <body>
@@ -22,8 +22,8 @@
   <div class="container_12">
     <div class="grid_12">
       <div class="page_title">
-        <a href="http://mattbarackman.com" target="_blank">
-          <h1>Matt Barackman</h1>
+        <a href="https://griffin-arkilic.netlify.app/" target="_blank">
+          <h1>Griffin Arkilic</h1>
         </a>
       </div>
     </div>
@@ -31,11 +31,9 @@
     <div class="grid_12">
       <div class="page_subtitle">
         <ul>
-          <li>3123 Sandalwood Ct.</li>
-          <li>Lafayette, CA 94549</li>
-          <li><a href='tel:2036486007' target="_blank">(203) 648-6007</a></li>
-          <li><a href="mailto:matthew.barackman@gmail.com" target="_blank">matthew.barackman@gmail.com</a></li>
-          <li><a href="https://github.com/mattbarackman" target="_blank"><img class="gh" height="20" width="20" src="images/GitHub-Mark-64px.png">mattbarackman</a></li>
+          <li><a href='tel:2036486007' target="_blank">(510) 666-5542</a></li>
+          <li><a href="mailto:garkilic@gmail.com" target="_blank">garkilic@gmail.com</a></li>
+          <li><a href="https://github.com/garkilic" target="_blank"><img class="gh" height="20" width="20" src="images/GitHub-Mark-64px.png">garkilic</a></li>
         </ul>
       </div>
     </div>
@@ -47,7 +45,7 @@
 
     <div class="section-content summary-content grid_12">
       <ul>
-        <li>I'm a full-stack software engineer with significant expertise in Ruby on Rails, AngularJS, and Scala.</li>
+        <li>I'm a self-taught front-end software engineer and product manager with significant expertise in Ruby on Rails, AngularJS, and Scala.</li>
         <li>I recently moved to the SF Bay Area and I'm seeking challenges related to big data, machine learning, and distributed systems.</li>
       </ul>
     </div>
