Personalization of content

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
     <div class="section-content summary-content grid_12">
       <ul>
-        <li>I'm a self-taught front-end software engineer and product manager with significant expertise in Ruby on Rails, AngularJS, and Scala.</li>
-        <li>I recently moved to the SF Bay Area and I'm seeking challenges related to big data, machine learning, and distributed systems.</li>
+        <li>I'm a self-taught front-end software engineer and product manager with significant expertise in building awesome user experiences.</li>
+        <li>I recently moved from product management to software development I'm seeking an opportunity to learn from other developers in projects related to health-tech, machine learning, and B2C products.</li>
       </ul>
     </div>
 
@@ -55,52 +55,82 @@
     </div>
 
     <div class="section-title grid_9">
-      <a href="http://www.localytics.com/" target="_blank">Software Engineer, Localytics - <i>Boston, MA</i></a>
+      <a href="https://griffin-arkilic.netlify.app/" target="_blank">Software Engineer, Freelance - <i>Oakland, CA</i></a>
     </div>
     <div class="dates grid_3">
-      May 2015 - June 2016
+      2021 - Present
     </div>
 
     <div class="section-content grid_12">
 
       <ul>
 
-        <li>Extended, refactored, and monitored an uptime critical redirect service responsible for servicing $2M worth of ads per day.</li>
-        <li>Led full-stack development on major initiatives including: a Google DoubleClick integration, the <a href="http://info.localytics.com/product-updates/device-fingerprinting-acquisition-attribution" target="_blank">ability to attribute app installs to ad campaigns using device fingerprinting</a>, and the <a href="http://info.localytics.com/product-updates/optimize-your-facebook-ad-campaigns-with-localytics-campaign-trawler" target="_blank"> ability to attribute app installs to specific pieces of advertising creative</a>.</li>
-        <li>Delivered the above initiatives on schedule to secure almost a million dollars' worth of new annually recurring revenue.</li>
-        <li>Learned, taught, and applied advanced functional programming concepts (e.g. functors, monads, and applicatives) in Scala.</li>
+        <li>Creating a React web application that provides users with a custom workout created by a
+          personal trainer.</li>
+        <li>Developing personal projects in React, CSS, and HTML meant to provide users with simple
+          services.</li>
+        <li>Working to collaborate with local companies in the Bay Area to maintain and improve their current web presence using a modern tech-stack to improve responsiveness and user experience.</li>
+        <li>Translating product requirements into technical specifications that can be executed upon in a two week development cycle.</li>
+        <li>Collaborating with designers to create the most optimum user experience for clients and
+          personal projects.</li>
       </ul>
     </div>
 
     <div class="section-title grid_9">
-      Software Engineer, Leaf (<a href="http://www.businesswire.com/news/home/20140814005935/en/Heartland-Payment-Systems-Acquires-Leaf" target="_blank">acquired by Heartland Payment Systems</a>) - <i>Cambridge, MA</i>
+     <a href="https://www.fitlab.com/" target="_blank">Product Manager, FitLab- <i>Oakland, CA</i></a> 
     </div>
     <div class="dates grid_3">
-      Oct. 2013 - May 2015
+      2021 - 2022
     </div>
 
     <div class="section-content grid_12">
       <ul>
-        <li>Led development on a Rails app used for configuring payment processing and inventory to support over $500K in daily volume.</li>
-        <li>Designed and implemented a Salesforce integration to bi-directionally sync data for hundreds of Leaf merchant accounts.</li>
-        <li>Built an Angular SPA ahead of 10-week schedule to provide front-end reporting for 45 million merchant transactions.</li>
-        <li>Mentored and supervised work for both an engineering intern and a junior developer.</li>
+        <li>Worked closely with our engineering team to build component-based applications using
+          material design in Flutter delivering on a six-week development cycle.</li>
+        <li>Collaborated with design and engineering to create a new payment flow in React and
+          GatsbyJS.</li>
+        <li>Converted our online payment service from the Shopify API to Stripe API to allow for
+          recurring purchases on the web</li>
+        <li>Created and maintained an agile software development lifecycle for our engineering, design, and product teams to allow for us to deliver updates and new products continuously.</li>
       </ul>
     </div>
 
     <div class="section-title grid_9">
-      <a href="http://chemistryclub.com/" target="_blank">Account Planner, Chemistry Club - <i>San Francisco, CA</i></a>
-    </div>
-    <div class="dates grid_3">
-      Dec. 2008 - May 2013
-    </div>
+      <a href="https://www.razorfish.com/" target="_blank">Associate Product Manager, Razorfish- <i>Oakland, CA</i></a> 
+     </div>
+     <div class="dates grid_3">
+       2020 - 2021
+     </div>
+ 
+     <div class="section-content grid_12">
+       <ul>
+         <li>Worked within an agile environment to ensure the continued development and improvement
+          for Citi Bank’s digital offerings along with their partners like The Home Depot and Macy’s</li>
+         <li>Led initiatives to increase registration conversion for new users as well as provide continuous optimizations using an analytical and customer-centric approach leading to an 80% completion rate</li>
+         <li>Continued the process of converting Citibanks partner card sites from Vue to Angular.</li>
+       </ul>
+     </div>
 
-    <div class="section-content grid_12">
+     <div class="section-title grid_9">
+      <a href="https://www.razorfish.com/" target="_blank">Product Manager, Fitplan(Acquired by FitLab) - <i>Los Angeles, CA</i></a> 
+     </div>
+     <div class="dates grid_3">
+       2019 - 2020
+     </div>
+ 
+     <div class="section-content grid_12">
+       <ul>
+         <li>Led a team of engineers and UI/UX designers to work throughout all stages of product
+          development which produced sales exceeding $8 MM and increased in-app retention by 62%
+          over a calendar year.</li>
+         <li>Developed review feedback loops and lifecycle marketing techniques to increase the app
+          store ratings from 4.2-4.8 stars and bring Fitplan into the ‘Top 100 apps in Health and
+          Fitness’ on the iOS app store.</li>
+         <li>Identified an opportunity in the OTT market for Fitplan and executed on the creation of a Samsung TV Fitplan app. Since launching in May 2020 the app has been downloaded over 4 MM times.</li>
+       </ul>
+     </div>
 
-      <ul>
-        <li>Researched and developed high-level advertising strategy including a <a href="https://wiki.mozilla.org/images/d/df/Firefox_Brand_Book.pdf" target="_blank">Firefox brand refresh</a> and a LinkedIn product launch.</li>
-      </ul>
-    </div>
+
 
     <div class="section-header grid_4 suffix_8">
       <h5><i class="icon-book"></i>Education</h5>
@@ -109,40 +139,28 @@
     <div class="section">
 
       <div class="section-title grid_9">
-        <a href="https://www.coursera.org/learn/machine-learning" target="_blank">Machine Learning (Stanford) - <i>Coursera.org</i></a>
+        <a href="https://scrimba.com/" target="_blank">The Frontend Developer Career Path - <i>Scrimba</i></a>
       </div>
       <div class="dates grid_3">
-        Aug. 2014 - Sept. 2014
+        2021 - 2022
       </div>
 
       <div class="section-content grid_12">
         <ul>
           <li>
-            Implemented algorithms for prediction and categorization using linear regression, logistic regression, and neural networks.
+            Built a range of projects while learning to build in HTML, CSS, JS, and React.
           </li>
-        </ul>
-      </div>
-
-      <div class="section-title grid_9">
-        <a href="http://www.devbootcamp.com" target="_blank">Dev Bootcamp - <i>San Francisco, CA</i></a>
-      </div>
-      <div class="dates grid_3">
-        May 2013 - July 2013
-      </div>
-
-      <div class="section-content grid_12">
-        <ul>
           <li>
-           Completed immersive three-month training on data modeling, object-oriented design, HTML/CSS, Ruby on Rails, and JS.
+            Outside of learning new languages, we were taught how to do code reviews, work with Git, and the basics of UI design.
           </li>
         </ul>
       </div>
 
       <div class="section-title grid_9">
-        <a href="http://ugis.ls.berkeley.edu/cogsci/" target="_blank">B.A. Cognitive Science - <i>UC Berkeley</i></a>
+        <a href="https://www.calpoly.edu/" target="_blank">B.S. Kinesiology and Entrepreneurship - <i>Cal Poly, San Luis Obispo</i></a>
       </div>
       <div class="dates grid_3">
-        Aug. 2004 - Dec. 2008
+        2015 - 2019
       </div>
 
       <div class="sub-title grid_12">
@@ -151,47 +169,13 @@
       <div class="section-content grid_12">
         <ul>
          <li>
-           Earned a 3.5 cumulative GPA.
+           Completed coursework while working towards completeing premed requirements.
          </li>
          <li>
-           Completed coursework on data-structures and algorithms, machine learning, statistics, and discrete probability.
+           While in school, I built software that was sold to universities and students.
          </li>
         </ul>
       </div>
-    </div>
-
-    <div class="section-header grid_5 suffix_7">
-      <h5><i class="icon-male"></i>Volunteer Experience</h5>
-    </div>
-
-    <div class="section-title grid_9">
-      <a href="https://github.com/mattbarackman/guardian-stone-device" target="_blank">Founder, Guardian Stone - <i>Oakland, CA</i></a>
-    </div>
-    <div class="dates grid_3">
-      Apr. 2016 - Present
-    </div>
-
-    <div class="section-content grid_12">
-      <ul>
-        <li>
-          Developing an Arduino-based solution for alerting family members via SMS when a loved one has fallen from their wheelchair.
-        </li>
-      </ul>
-    </div>
-
-    <div class="section-title grid_9">
-      <a href="http://www.abilityexperience.org/pushcontent.aspx?id=351" target="_blank">Cyclist, Journey of Hope - <i>USA</i></a>
-    </div>
-    <div class="dates grid_3">
-      June 2007 - Aug. 2007
-    </div>
-
-    <div class="section-content grid_12">
-      <ul>
-        <li>
-          Cycled 4,000 miles from the SF Bay Area to Washington D.C. to raise money and awareness for people with disabilities.
-        </li>
-      </ul>
     </div>
 
 
@@ -202,13 +186,13 @@
       <div class="section-content">
         <ul>
           <li>
-            I'm adaptable, pragmatic, and detail-oriented.
+            I'm always trying to find new ways to solve interesting problems.
           </li>
           <li>
             I'm a student of object-oriented, reactive, and functional programming paradigms.
           </li>
           <li>
-            I love cycling, science fiction, and making beer.
+            I love exercise, building, and writing funny stories.
           </li>
         </ul>
       </div>
@@ -221,16 +205,16 @@
 
       <div class="section-content">
           <p class="gray skill">
-            Scala / Akka / Play
+            React / JS
           </p>
           <p class="gray skill">
-            Ruby / Rails / RSpec
+            HTML / CSS
+          </p> 
+          <p class="gray skill">
+            Git / SQ
           </p>
           <p class="gray skill">
-            JS / Angular / React
-          </p>
-          <p class="gray skill">
-            Git / SQL / AWS / Heroku
+            Wordpress
           </p>
       </div>
     </div>
@@ -242,10 +226,10 @@
       <div class="section-content">
         <ul>
           <li>
-            Eagle Scout
+            Innovation Quest Finalist
           </li>
           <li>
-            Member of the National Society of Collegiate Scholars
+            First Investment by Poly Canyon Ventures
           </li>
         </ul>
       </div>
