Minor updates with styling

--- a/index.html
+++ b/index.html
@@ -1,240 +1,312 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="chrome=1" />
+		<meta
+			name="description"
+			content="Griffin Arkilic : Web Developer, Product Person, and entrepreneur."
+		/>
 
-<head>
-  <meta charset='utf-8' />
-  <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-  <meta name="description" content="Griffin Arkilic : Web Developer, Product Person, and entrepreneur." />
+		<link
+			rel="stylesheet"
+			type="text/css"
+			media="all"
+			href="stylesheets/stylesheet.css"
+		/>
+		<link
+			rel="stylesheet"
+			type="text/css"
+			media="all"
+			href="stylesheets/normalize.css"
+		/>
+		<link
+			rel="stylesheet"
+			type="text/css"
+			media="all"
+			href="stylesheets/960_12_col.css"
+		/>
+		<!-- <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'> -->
+		<link
+			href="fonts/LithoAntique-Light.woff"
+			rel="stylesheet"
+			type="text/css"
+			media="all"
+		/>
+		<link
+			href="font-awesome/css/font-awesome.min.css"
+			rel="stylesheet"
+			type="text/css"
+			media="all"
+		/>
 
-  <link rel="stylesheet" type="text/css" media="all" href="stylesheets/stylesheet.css">
-  <link rel="stylesheet" type="text/css" media="all" href="stylesheets/normalize.css">
-  <link rel="stylesheet" type="text/css" media="all" href="stylesheets/960_12_col.css">
-  <!-- <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'> -->
-  <link href="fonts/LithoAntique-Light.woff" rel="stylesheet" type="text/css" media="all">
-  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all">
+		<title>Griffin Arkilic</title>
+	</head>
 
+	<body>
+		<div class="container_12">
+			<div class="grid_12">
+				<div class="page_title">
+					<a href="https://griffin-arkilic.netlify.app/" target="_blank">
+						<h1>Griffin Arkilic</h1>
+					</a>
+				</div>
+			</div>
 
-  <title>Griffin Arkilic</title>
-</head>
+			<div class="grid_12">
+				<div class="page_subtitle">
+					<ul>
+						<li><a href="tel:2036486007" target="_blank">(510) 666-5542</a></li>
+						<li>
+							<a href="mailto:garkilic@gmail.com" target="_blank"
+								>garkilic@gmail.com</a
+							>
+						</li>
+						<li>
+							<a href="https://github.com/garkilic" target="_blank"
+								><img
+									class="gh"
+									height="20"
+									width="20"
+									src="images/GitHub-Mark-64px.png"
+								/>garkilic</a
+							>
+						</li>
+					</ul>
+				</div>
+			</div>
 
-<body>
+			<div class="section-header grid_4 suffix_8">
+				<h5><i class="icon-home"></i>Summary</h5>
+			</div>
 
-  <div class="container_12">
-    <div class="grid_12">
-      <div class="page_title">
-        <a href="https://griffin-arkilic.netlify.app/" target="_blank">
-          <h1>Griffin Arkilic</h1>
-        </a>
-      </div>
-    </div>
+			<div class="section-content summary-content grid_12">
+				<ul>
+					<li>
+						I'm a self-taught fullsck software engineer and product manager with
+						significant expertise in building awesome user experiences.
+					</li>
+					<li>
+						I recently moved from product management to software development I'm
+						seeking an opportunity to learn from other developers in projects
+						related to health-tech, machine learning, and B2C products.
+					</li>
+				</ul>
+			</div>
 
-    <div class="grid_12">
-      <div class="page_subtitle">
-        <ul>
-          <li><a href='tel:2036486007' target="_blank">(510) 666-5542</a></li>
-          <li><a href="mailto:garkilic@gmail.com" target="_blank">garkilic@gmail.com</a></li>
-          <li><a href="https://github.com/garkilic" target="_blank"><img class="gh" height="20" width="20" src="images/GitHub-Mark-64px.png">garkilic</a></li>
-        </ul>
-      </div>
-    </div>
+			<div class="section-header grid_4 suffix_8">
+				<h5><i class="icon-briefcase"></i>Work Experience</h5>
+			</div>
 
+			<div class="section-title grid_9">
+				<a href="https://griffin-arkilic.netlify.app/" target="_blank"
+					>Software Engineer, Freelance - <i>Oakland, CA</i></a
+				>
+			</div>
+			<div class="dates grid_3">2021 - Present</div>
 
-    <div class="section-header grid_4 suffix_8">
-      <h5><i class="icon-home"></i>Summary</h5>
-    </div>
+			<div class="section-content grid_12">
+				<ul>
+					<li>
+						Creating a React web application that provides users with a custom
+						workout created by a personal trainer.
+					</li>
+					<li>
+						Developing personal projects in React, CSS, and HTML meant to
+						provide users with simple services.
+					</li>
+					<li>
+						Working to collaborate with local companies in the Bay Area to
+						maintain and improve their current web presence using a modern
+						tech-stack to improve responsiveness and user experience.
+					</li>
+					<li>
+						Translating product requirements into technical specifications that
+						can be executed upon in a two week development cycle.
+					</li>
+					<li>
+						Collaborating with designers to create the most optimum user
+						experience for clients and personal projects.
+					</li>
+				</ul>
+			</div>
 
-    <div class="section-content summary-content grid_12">
-      <ul>
-        <li>I'm a self-taught front-end software engineer and product manager with significant expertise in building awesome user experiences.</li>
-        <li>I recently moved from product management to software development I'm seeking an opportunity to learn from other developers in projects related to health-tech, machine learning, and B2C products.</li>
-      </ul>
-    </div>
+			<div class="section-title grid_9">
+				<a href="https://www.fitlab.com/" target="_blank"
+					>Product Manager, FitLab- <i>Oakland, CA</i></a
+				>
+			</div>
+			<div class="dates grid_3">2021 - 2022</div>
 
-    <div class="section-header grid_4 suffix_8">
-      <h5><i class="icon-briefcase"></i>Work Experience</h5>
-    </div>
+			<div class="section-content grid_12">
+				<ul>
+					<li>
+						Worked closely with our engineering team to build component-based
+						applications using material design in Flutter delivering on a
+						six-week development cycle.
+					</li>
+					<li>
+						Collaborated with design and engineering to create a new payment
+						flow in React and GatsbyJS.
+					</li>
+					<li>
+						Converted our online payment service from the Shopify API to Stripe
+						API to allow for recurring purchases on the web
+					</li>
+					<li>
+						Created and maintained an agile software development lifecycle for
+						our engineering, design, and product teams to allow for us to
+						deliver updates and new products continuously.
+					</li>
+				</ul>
+			</div>
 
-    <div class="section-title grid_9">
-      <a href="https://griffin-arkilic.netlify.app/" target="_blank">Software Engineer, Freelance - <i>Oakland, CA</i></a>
-    </div>
-    <div class="dates grid_3">
-      2021 - Present
-    </div>
+			<div class="section-title grid_9">
+				<a href="https://www.razorfish.com/" target="_blank"
+					>Associate Product Manager, Razorfish - <i>Oakland, CA</i></a
+				>
+			</div>
+			<div class="dates grid_3">2020 - 2021</div>
 
-    <div class="section-content grid_12">
+			<div class="section-content grid_12">
+				<ul>
+					<li>
+						Worked within an agile environment to ensure the continued
+						development and improvement for Citi Bank’s digital offerings along
+						with their partners like The Home Depot and Macy’s
+					</li>
+					<li>
+						Led initiatives to increase registration conversion for new users as
+						well as provide continuous optimizations using an analytical and
+						customer-centric approach leading to an 80% completion rate
+					</li>
+					<li>
+						Continued the process of converting Citibanks partner card sites
+						from Vue to Angular.
+					</li>
+				</ul>
+			</div>
 
-      <ul>
+			<div class="section-title grid_9">
+				<a href="https://www.razorfish.com/" target="_blank"
+					>Product Manager, Fitplan(Acquired by FitLab) -
+					<i>Los Angeles, CA</i></a
+				>
+			</div>
+			<div class="dates grid_3">2019 - 2020</div>
 
-        <li>Creating a React web application that provides users with a custom workout created by a
-          personal trainer.</li>
-        <li>Developing personal projects in React, CSS, and HTML meant to provide users with simple
-          services.</li>
-        <li>Working to collaborate with local companies in the Bay Area to maintain and improve their current web presence using a modern tech-stack to improve responsiveness and user experience.</li>
-        <li>Translating product requirements into technical specifications that can be executed upon in a two week development cycle.</li>
-        <li>Collaborating with designers to create the most optimum user experience for clients and
-          personal projects.</li>
-      </ul>
-    </div>
+			<div class="section-content grid_12">
+				<ul>
+					<li>
+						Led a team of engineers and UI/UX designers to work throughout all
+						stages of product development which produced sales exceeding $8 MM
+						and increased in-app retention by 62% over a calendar year.
+					</li>
+					<li>
+						Developed review feedback loops and lifecycle marketing techniques
+						to increase the app store ratings from 4.2-4.8 stars and bring
+						Fitplan into the ‘Top 100 apps in Health and Fitness’ on the iOS app
+						store.
+					</li>
+					<li>
+						Identified an opportunity in the OTT market for Fitplan and executed
+						on the creation of a Samsung TV Fitplan app. Since launching in May
+						2020 the app has been downloaded over 4 MM times.
+					</li>
+				</ul>
+			</div>
 
-    <div class="section-title grid_9">
-     <a href="https://www.fitlab.com/" target="_blank">Product Manager, FitLab- <i>Oakland, CA</i></a> 
-    </div>
-    <div class="dates grid_3">
-      2021 - 2022
-    </div>
+			<div class="section-header grid_4 suffix_8">
+				<h5><i class="icon-book"></i>Education</h5>
+			</div>
 
-    <div class="section-content grid_12">
-      <ul>
-        <li>Worked closely with our engineering team to build component-based applications using
-          material design in Flutter delivering on a six-week development cycle.</li>
-        <li>Collaborated with design and engineering to create a new payment flow in React and
-          GatsbyJS.</li>
-        <li>Converted our online payment service from the Shopify API to Stripe API to allow for
-          recurring purchases on the web</li>
-        <li>Created and maintained an agile software development lifecycle for our engineering, design, and product teams to allow for us to deliver updates and new products continuously.</li>
-      </ul>
-    </div>
+			<div class="section">
+				<div class="section-title grid_9">
+					<a href="https://scrimba.com/" target="_blank"
+						>The Frontend Developer Career Path - <i>Scrimba</i></a
+					>
+				</div>
+				<div class="dates grid_3">2021 - 2022</div>
 
-    <div class="section-title grid_9">
-      <a href="https://www.razorfish.com/" target="_blank">Associate Product Manager, Razorfish - <i>Oakland, CA</i></a> 
-     </div>
-     <div class="dates grid_3">
-       2020 - 2021
-     </div>
- 
-     <div class="section-content grid_12">
-       <ul>
-         <li>Worked within an agile environment to ensure the continued development and improvement
-          for Citi Bank’s digital offerings along with their partners like The Home Depot and Macy’s</li>
-         <li>Led initiatives to increase registration conversion for new users as well as provide continuous optimizations using an analytical and customer-centric approach leading to an 80% completion rate</li>
-         <li>Continued the process of converting Citibanks partner card sites from Vue to Angular.</li>
-       </ul>
-     </div>
+				<div class="section-content grid_12">
+					<ul>
+						<li>
+							Built a range of projects while learning to build in HTML, CSS,
+							JS, and React.
+						</li>
+						<li>
+							Outside of learning new languages, we were taught how to do code
+							reviews, work with Git, and the basics of UI design.
+						</li>
+					</ul>
+				</div>
 
-     <div class="section-title grid_9">
-      <a href="https://www.razorfish.com/" target="_blank">Product Manager, Fitplan(Acquired by FitLab) - <i>Los Angeles, CA</i></a> 
-     </div>
-     <div class="dates grid_3">
-       2019 - 2020
-     </div>
- 
-     <div class="section-content grid_12">
-       <ul>
-         <li>Led a team of engineers and UI/UX designers to work throughout all stages of product
-          development which produced sales exceeding $8 MM and increased in-app retention by 62%
-          over a calendar year.</li>
-         <li>Developed review feedback loops and lifecycle marketing techniques to increase the app
-          store ratings from 4.2-4.8 stars and bring Fitplan into the ‘Top 100 apps in Health and
-          Fitness’ on the iOS app store.</li>
-         <li>Identified an opportunity in the OTT market for Fitplan and executed on the creation of a Samsung TV Fitplan app. Since launching in May 2020 the app has been downloaded over 4 MM times.</li>
-       </ul>
-     </div>
+				<div class="section-title grid_9">
+					<a href="https://www.calpoly.edu/" target="_blank"
+						>B.S. Kinesiology and Entrepreneurship -
+						<i>Cal Poly, San Luis Obispo</i></a
+					>
+				</div>
+				<div class="dates grid_3">2015 - 2019</div>
 
+				<div class="sub-title grid_12"></div>
 
+				<div class="section-content grid_12">
+					<ul>
+						<li>
+							Completed coursework while working towards completeing premed
+							requirements.
+						</li>
+						<li>
+							While in school, I built software that was sold to universities
+							and students.
+						</li>
+					</ul>
+				</div>
+			</div>
 
-    <div class="section-header grid_4 suffix_8">
-      <h5><i class="icon-book"></i>Education</h5>
-    </div>
+			<div class="grid_5">
+				<div class="section-header">
+					<h5><i class="icon-rocket"></i>About Me</h5>
+				</div>
+				<div class="section-content">
+					<ul>
+						<li>
+							I'm always trying to find new ways to solve interesting problems.
+						</li>
+						<li>
+							I'm a student of object-oriented, reactive, and functional
+							programming paradigms.
+						</li>
+						<li>I love exercise, building, and writing funny stories.</li>
+					</ul>
+				</div>
+			</div>
 
-    <div class="section">
+			<div class="grid_3">
+				<div class="section-header">
+					<h5><i class="icon-lightbulb"></i>Skills</h5>
+				</div>
 
-      <div class="section-title grid_9">
-        <a href="https://scrimba.com/" target="_blank">The Frontend Developer Career Path - <i>Scrimba</i></a>
-      </div>
-      <div class="dates grid_3">
-        2021 - 2022
-      </div>
+				<div class="section-content">
+					<p class="gray skill">React / JS</p>
+					<p class="gray skill">HTML / CSS</p>
+					<p class="gray skill">Git / SQ</p>
+					<p class="gray skill">Wordpress</p>
+				</div>
+			</div>
 
-      <div class="section-content grid_12">
-        <ul>
-          <li>
-            Built a range of projects while learning to build in HTML, CSS, JS, and React.
-          </li>
-          <li>
-            Outside of learning new languages, we were taught how to do code reviews, work with Git, and the basics of UI design.
-          </li>
-        </ul>
-      </div>
-
-      <div class="section-title grid_9">
-        <a href="https://www.calpoly.edu/" target="_blank">B.S. Kinesiology and Entrepreneurship - <i>Cal Poly, San Luis Obispo</i></a>
-      </div>
-      <div class="dates grid_3">
-        2015 - 2019
-      </div>
-
-      <div class="sub-title grid_12">
-      </div>
-
-      <div class="section-content grid_12">
-        <ul>
-         <li>
-           Completed coursework while working towards completeing premed requirements.
-         </li>
-         <li>
-           While in school, I built software that was sold to universities and students.
-         </li>
-        </ul>
-      </div>
-    </div>
-
-
-    <div class="grid_5">
-      <div class="section-header">
-        <h5><i class="icon-rocket"></i>About Me</h5>
-      </div>
-      <div class="section-content">
-        <ul>
-          <li>
-            I'm always trying to find new ways to solve interesting problems.
-          </li>
-          <li>
-            I'm a student of object-oriented, reactive, and functional programming paradigms.
-          </li>
-          <li>
-            I love exercise, building, and writing funny stories.
-          </li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="grid_3">
-      <div class="section-header">
-        <h5><i class="icon-lightbulb"></i>Skills</h5>
-      </div>
-
-      <div class="section-content">
-          <p class="gray skill">
-            React / JS
-          </p>
-          <p class="gray skill">
-            HTML / CSS
-          </p> 
-          <p class="gray skill">
-            Git / SQ
-          </p>
-          <p class="gray skill">
-            Wordpress
-          </p>
-      </div>
-    </div>
-
-    <div class="grid_4">
-      <div class="section-header">
-          <h5><i class="icon-star"></i>Honors</h5>
-      </div>
-      <div class="section-content">
-        <ul>
-          <li>
-            Innovation Quest Finalist
-          </li>
-          <li>
-            First Investment by Poly Canyon Ventures
-          </li>
-        </ul>
-      </div>
-    </div>
-
-</div>
-
-</body>
+			<div class="grid_4">
+				<div class="section-header">
+					<h5><i class="icon-star"></i>Honors</h5>
+				</div>
+				<div class="section-content">
+					<ul>
+						<li>Innovation Quest Finalist</li>
+						<li>First Investment by Poly Canyon Ventures</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</body>
+</html>
